--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -1,6 +1,6 @@
 <h2>List</h2>
-<ul>
+<ul id="notesList">
   <% for(note in notes) { %>
-  <li><%= notes[note].title %></li>
+  <li><%= notes[note].title %> - <a href="#note/<%= notes[note].id %>/delete">remove</a></li>
   <% } %>
 </ul>
