--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -1,6 +1,9 @@
 <h2>List</h2>
 <ul id="notesList">
   <% for(note in notes) { %>
-  <li><%= notes[note].title %> - <a href="#note/<%= notes[note].id %>/delete">remove</a> <a class="test">test</a></li>
+  <li>
+  	<%= notes[note].title %>
+  	<a href="#note/<%= notes[note].id %>/view">view</a> 
+  	<a href="#note/<%= notes[note].id %>/delete">remove</a></li>
   <% } %>
 </ul>
